Change log for zeit.web
=======================

2.6 (unreleased)
----------------

- FIX: Compute proper liveblog status


2.5 (2015-09-21)
----------------

- MAINT: Embed liveblogs using ESI

- ZON-2227: Mask nextread date for google

- ZON-2204: Pin version of bxslider to 4.2.3 to prevent bug in 4.2.4+

- FIX: Ignore missing meta files for content linked from articles

- FIX: Print table of contents before the first paragraph only

- FIX: Generate PNG icons for svg4everybody fallback images

- MAINT: Add ESI capabilites for esi:remove

- MAINT: Change `image_host` to `image_prefix` setting, which allows both a
  path and a full URL prefix like ``http://image.example.com``, and doesn't
  get confused by appserver ports.


2.4 (2015-09-18)
----------------

- ZON-1489: Add table of contents for articles with pagination

- FIX: Don't break feed generation on imagegroups whose meta files are missing

- FIX: Ignore old-style video.zeit.de uniqueIds since we cannot resolve them

- FIX: Handle non-ascii in keyword redirects (encode as utf-8)


2.3 (2015-09-17)
----------------

- HOTFIX: Don't break in auto areas when videos are teasered on a CP

- MAINT: Clean up tests


2.2 (2015-09-17)
----------------


- QUICKFIX: Show correct print link for one page articles

- ZON-1873: Dont make pagination headlines break

- ZON-2219: Fix image size in force-mobile

- ZON-2220: Correct Servicebox links (configuration via batou, no change in zeit.web)

- ZON-2228: Add only p param to canonical

- ZON-2231: Complete schema.org mark-up for articles

- FIX: Add path_info as query for banner mappings

- FIX: Generate PNG icons for svg4everybody fallback images

- FIX: Join rules for robots in view.py otherwise articles don't get correct rules

- FIX: Prevent Next Read from Jumping

- FIX: Repair css on eilmeldungs article

- FIX: Update liveblog article template name

- MAINT: Make host for image urls configurable
