@@ -192,9 +192,11 @@ class Application(object):
         config.add_route('spektrum-image', '/spektrum-image/*path')
         config.add_route(
             'schlagworte_index',
-            '/schlagworte/{entity}/{item:[A-Z]}/index',
+            '/schlagworte/{category}/{item:[A-Z]($|/$|/index$)}',
             zeit.web.core.view.surrender)
-        config.add_route('schlagworte', '/schlagworte/{entity}/{item}/index')
+        config.add_route(
+            'schlagworte',
+            '/schlagworte/{category}/{item}{subpath:($|/$|/index$)}')
 
         # Route to post comments to a communit service
         config.add_route('post_test_comments', '/admin/test-comments')
